# nixos-configs

./: README.md  default.nix  flake.nix  garnix.yaml  generate.nix  helpers.nix  mkHost.nix  mkTest.nix  renovate.json  sources.json  tailscale-policy.nix  tool  x  x.py
.github/workflows/: build.sh  build.yml  known_hosts  update.yaml
backup/alecto/: s3.enc
backup/hydrangea/: repo.enc  s3.enc
backup/skyrabbit/: password.enc  repo.enc  s3.enc
backup/vermilion/: password.enc
etc/: container-addresses.py  dotfiles.sh  hydra-github-auth.age  iliana-ssh.pub  nix-cache.age  nix-cache.pub  pdns-load.sh  x.py
etc/haha.business/: index.html
flunks/: gaia.nix
hardware/: default.nix  hetzner-v1.nix  image-builder.nix  pancake-v1.nix  raspi-v1.nix  test.nix  virt-v1.nix
hosts/: alecto.nix  default.nix  forklift.nix  hydrangea.nix  juice.nix  kasou.nix  lernie.nix  megaera.nix  poffertje.nix  tisiphone.nix  vermilion.nix
hosts/alecto/: default.nix  irc.nix  join-libera.conf.enc  join-wobscale.conf.enc  (+1 more)
lib/: backup.nix  builder.nix  caddy.nix  containers.nix  creds.nix  default.nix  dotfiles.nix  dotfiles.sh  hosts.json  media.nix  pdns.nix  registry.nix  systemd.nix  tailscale.nix  test.nix
modules/: backup.nix  buildHost.nix  dev.nix  obsidian-syncthing.nix  scuttlebutt.nix  transmission.nix
modules/www/pkgf/: Cargo.toml  default.nix
npins/: sources.json
profiles/: base.nix  containers.nix  dotfiles.nix  dotfiles.sh  guest-server.nix  registry.nix  tailscale.nix
systems/: hydrangea.nix
tests/: default.nix  hydrangea.nix  knot.nix  pdns.nix  web.nix
(+93 files in other folders)
