[package]
name = "pkgf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.18", default-features = false, features = ["tokio", "json"] }
regex = "1.8.1"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
